Modifications SonarLint